--- a/curso-react-cod3r/fundamentos-react/src/index.css
+++ b/curso-react-cod3r/fundamentos-react/src/index.css
@@ -2,4 +2,12 @@ body {
     background-color: #222;
     color: #fff;
     font-size: 1.5em;
+    font-family: Oswald;
+    text-align: center;
+}
+h1, h2, h3 {
+    font-weight: 200;
+}
+h2, h3 {
+    margin: 0;
 }
