--- a/curso-react-cod3r/fundamentos-react/src/components/Layout/Card.css
+++ b/curso-react-cod3r/fundamentos-react/src/components/Layout/Card.css
@@ -1,9 +1,13 @@
 .Card {
-    background-color: red;
-    border: 3px solid red;
+    border: 3px solid;
     border-radius: 10px;
     overflow: hidden;
     margin: 10px;
+
+    display: flex;
+    flex-direction: column;
+    min-width: 300px;
+    max-width: 300px;
 }
 .Card .Title {
     padding: 5px 0px;
@@ -12,6 +16,7 @@
 
 }
 .Card .Content {
+    flex-grow: 1;
     background-color: white;
     color: black;
     padding: 10px;
